Fix cutoff qr It's not aligned like it should, but fixing that risks cutting off a part on the side and that would ruin it.

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -19,18 +19,10 @@ footer{
 /* Remove margin from qr code */
 .qrcode{
   text-align: center;
-  overflow: hidden;
 }
 .qrcode img{
-  text-align: center;
   display: inline-block;
-  margin: -5% -10%;
-}
-@media (min-width: 768px) {
-  .qrcode img{
-    width: 120%;
-    height: 120%;
-  }
+  max-width: 100%;
 }
 
 /* Status tables */
